fixed line below not showing when selected

--- a/frontend/src/components/Select/CustomSelect.scss
+++ b/frontend/src/components/Select/CustomSelect.scss
@@ -37,7 +37,7 @@
   overflow: hidden;
   font-family: Lato,sans-serif,Roboto,"Helvetica Neue",Arial,sans-serif;
   width: 100%;
-  height: 100%;
+  height: 16px;
   padding: 0.8em 1em;
   background: #3C3C3C;
   border-top: 1px solid #4F4F4F;
